--- a/client/src/pages/MainPage.css
+++ b/client/src/pages/MainPage.css
@@ -1,4 +1,4 @@
-.main-block{
+.main-block {
     display: flex;
     position: fixed;
     top: 0;
@@ -6,7 +6,8 @@
     width: 100%;
     height: 100%;
 }
-.left-block{
+
+.left-block {
     width: 20%;
     background-color: #fff;
     padding: 1em 0;
@@ -14,21 +15,24 @@
     flex-direction: column;
     justify-content: space-between;
 }
-.right-block{
+
+.right-block {
     overflow: scroll;
     overflow-x: hidden;
     width: 80%;
-    background: linear-gradient(0.25turn,#B1CC61, #f6f6f6);
+    background: linear-gradient(0.25turn, #B1CC61, #f6f6f6);
 }
 
-.user-data{
+.user-data {
     width: 80%;
     margin: auto;
 }
-.user-name img{
+
+.user-name img {
     width: 70px;
 }
-.user-name{
+
+.user-name {
     font-size: 1.8em;
     font-weight: 600;
     margin-bottom: 0.5em;
@@ -36,26 +40,31 @@
     align-items: center;
     justify-content: space-between;
 }
-.user-edit{
+
+.user-edit {
     cursor: pointer;
 }
-.user-edit img{
+
+.user-edit img {
     width: 30px;
 }
-.user-feature{
+
+.user-feature {
     display: flex;
     flex-direction: column;
 }
-.user-feature span{
+
+.user-feature span {
     margin: 0.2em 0;
     font-size: 1.2em;
 }
 
-.menu-block{
+.menu-block {
     text-align: center;
     margin-top: 2em;
 }
-.menu-item{
+
+.menu-item {
     margin: 0 0.5em;
     font-size: 1.5em;
     font-weight: 600;
@@ -63,53 +72,61 @@
     cursor: pointer;
 }
 
-.active{
+.active {
     background-color: #B1CC61;
 }
-.menu-item:nth-last-child(1){
+
+.menu-item:nth-last-child(1) {
     border-bottom: none;
 }
 
-.search-block{
+.search-block {
     background-color: #fff;
     margin: 0.5em;
     border-radius: 5px;
     padding: 1em 0;
     text-align: center;
 }
-.search-block__input{
+
+.search-block__input {
     border: 1px solid silver;
     align-items: center;
     padding: 0 0.5em;
     margin: auto;
 }
-.search-block__input:hover{
+
+.search-block__input:hover {
     border: 1px solid #B1CC61;
 }
-.search-block__input input{
+
+.search-block__input input {
     width: 97%;
     border: none;
     padding: 0.5em;
 }
-.search-block__input input:focus{
+
+.search-block__input input:focus {
     outline: none;
 }
-.search-block__input svg{
+
+.search-block__input svg {
     right: 0px;
     position: absolute;
     cursor: pointer;
 }
+
 .svg-inline--fa {
     margin: 0 0.5em;
 }
 
-.block-cards{
+.block-cards {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
 }
-.item-card, 
-.products-block{
+
+.item-card,
+.products-block {
     background-color: #fff;
     width: 30%;
     margin: 0.5em;
@@ -117,32 +134,39 @@
     text-align: center;
     padding: 1em;
 }
-.item-card-form{
+
+.item-card-form {
     width: 55%;
 }
-.item-card-res{
+
+.item-card-res {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 39%;
 }
-.units_label{
+
+.units_label {
     position: absolute;
     left: 80%;
     top: 19%;
-    color:gray;
+    color: gray;
 }
-.products-block{
+
+.products-block {
     text-align: left;
 }
-.category-title{
+
+.category-title {
     cursor: pointer;
 }
-.category-title img{
+
+.category-title img {
     width: 20vh;
     margin-bottom: 1em;
 }
-.category-block{
+
+.category-block {
     background: #fff;
     padding: 1em;
     border-radius: 5px;
@@ -153,56 +177,68 @@
     align-items: center;
     display: grid;
 }
-.category-block.w-100{
+
+.category-block.w-100 {
     order: 0;
 }
-.category-block.w-100 .category-title{
+
+.category-block.w-100 .category-title {
     display: flex;
     align-items: center;
     justify-content: flex-start;
     padding-right: 3em;
     flex-direction: row-reverse;
 }
-.category-block.w-100 .category-title h2{
+
+.category-block.w-100 .category-title h2 {
     font-size: 4em;
     margin-right: 0.5em;
 }
-.products-info{
+
+.products-info {
     width: 100%;
     display: grid;
 }
-.products-info p{
+
+.products-info p {
     display: flex;
     justify-content: space-between;
     border-bottom: 1px solid silver;
     padding: 0.3em 0;
     align-items: center;
 }
-.products-info p:nth-child(5){
+
+.products-info p:nth-child(5) {
     border-bottom: none;
 }
-.products-info img{
+
+.products-info img {
     width: 30px;
 }
-.cKal-result{
+
+.cKal-result {
     display: grid;
     font-size: 1.5em;
 }
-.cKal-result .result-number{
+
+.cKal-result .result-number {
     font-size: 3em;
     font-weight: 600;
     color: #B1CC61;
 }
-.cKal-result label{
+
+.cKal-result label {
     font-size: 0.8em;
 }
-.bju_result{
+
+.bju_result {
     width: 33.3%;
     display: flex;
     justify-content: center;
     flex-direction: column;
 }
-.pregnant-info{
+
+.pregnant-info {
     text-align: left;
     padding: 1em;
     background-color: #FDF5D9;
@@ -210,45 +246,179 @@
     color: #676767;
     font-size: 0.9em;
 }
+
 .form-control.is-valid,
 .was-validated .form-control:valid {
     background-position: right calc(1em + .1875rem) center;
 }
-.products-block__title{
+
+.products-block__title {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-.products-info p span{
-    font-size: 0.7em  
+
+.products-info p span {
+    font-size: 0.7em
 }
-.products-info .products-block__title a{
+
+.products-info .products-block__title a {
     text-decoration: underline;
     color: #6c757d;
 }
-.products-info .products-block__title a:hover{
+
+.products-info .products-block__title a:hover {
     text-decoration: underline;
     color: #393f42;
 }
 
-.row.products-block.w-100{
+.row.products-block.w-100 {
     background-color: #ececec;
 }
-.category-block p{
+
+.category-block p {
     font-size: 1.5em
 }
-.category-block.w-100 .category-title p{
+
+.category-block.w-100 .category-title p {
     font-size: 2.5em
 }
+
 .pf-c-chart svg g:nth-child(3) path:nth-child(2),
-.pf-c-chart svg g:nth-child(2) path:nth-child(1){
-    fill: #007bff!important;
+.pf-c-chart svg g:nth-child(2) path:nth-child(1) {
+    fill: #007bff !important;
 }
+
 .pf-c-chart svg g:nth-child(3) path:nth-child(3),
-.pf-c-chart svg g:nth-child(2) path:nth-child(2){
-    fill: #dc3545!important;
+.pf-c-chart svg g:nth-child(2) path:nth-child(2) {
+    fill: #dc3545 !important;
 }
+
 .pf-c-chart svg g:nth-child(3) path:nth-child(4),
-.pf-c-chart svg g:nth-child(2) path:nth-child(3){
-    fill: #ffc107!important;
+.pf-c-chart svg g:nth-child(2) path:nth-child(3) {
+    fill: #ffc107 !important;
+}
+
+@media only screen and (min-width: 0) and (max-width: 480px) {
+    .main-block {
+        flex-direction: column;
+    }
+
+    .left-block {
+        width: 100%;
+    }
+
+    .left-block div:nth-child(2) {
+        display: none;
+    }
+
+    .menu-block {
+        margin-top: 0;
+    }
+
+    .right-block {
+        width: 100%;
+        height: 85vh;
+    }
+
+    .item-card-form {
+        width: 100%;
+    }
+
+    .item-card-res {
+        width: 100%;
+    }
+
+    .bju_result {
+        font-size: 0.8em;
+    }
+
+    .category-block {
+        width: 45%;
+    }
+
+    .category-title img {
+        width: 12vh;
+    }
+
+    .category-title p {
+        font-size: 1em;
+    }
+
+    .category-title a {
+        font-size: 0.7em;
+    }
+
+    .category-block.w-100 .category-title {
+        padding-right: 0;
+    }
+
+    .category-block.w-100 .category-title p {
+        font-size: 1.5em;
+    }
+
+    .category-block.w-100 {
+        order: 1;
+    }
+
+    .products-block {
+        width: 100%;
+    }
+
+    .row.products-block.w-100 {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .products-info.w-50,
+    .products-info.text-center.w-50 {
+        width: 100% !important;
+    }
+}
+
+@media only screen and (min-width: 481px) and (max-width: 1024px) {
+    .main-block {
+        flex-direction: column;
+    }
+
+    .left-block {
+        width: 100%;
+    }
+
+    .menu-block {
+        margin-top: 0;
+    }
+
+    .left-block div:nth-child(2) {
+        display: none;
+    }
+
+    .right-block {
+        width: 100%;
+        height: 100%;
+    }
+
+    .bju_result {
+        font-size: 0.8em;
+    }
+
+    .category-block {
+        width: 30%;
+    }
+
+    .category-title img {
+        width: 12vh;
+    }
+
+    .category-title p {
+        font-size: 1em;
+    }
+
+    .category-title a {
+        font-size: 0.7em;
+    }
+
+    .products-block {
+        width: 45%;
+    }
 }
