--- a/client/src/pages/MainPage.css
+++ b/client/src/pages/MainPage.css
@@ -298,6 +298,22 @@
 .pf-c-chart svg g:nth-child(2) path:nth-child(3) {
     fill: #ffc107 !important;
 }
+.spinner-block{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 5em;
+}
+.spinner-block .spinner-border{
+    width: 5em;
+    height: 5em;
+    margin-bottom: 1em;
+}
+.spinner-block span{
+    font-size: 1.5em;
+    font-weight: 600;
+}
 
 @media only screen and (min-width: 0) and (max-width: 480px) {
     .main-block {
